apps/base/infra-kubernetes-metrics-server/deploy/kubernetes-metrics-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra-kubernetes-metrics-server
