apps/base/infra-kubernetes-metrics-server/deploy/kubernetes-metrics-server/metrics-server-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metrics-server
  namespace: infra-kubernetes-metrics-server
spec:
  selector:
    app.kubernetes.io/name: metrics-server
    app.kubernetes.io/component: metrics-server
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
